Swap Trash for Delete action when only one is enabled and the Shift modifier is pressed

Summary:
Now matches Dolphin behavior.

BUG:395155

Reviewers: broulik, davidedmundson, mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D13508